# agentic-bylaw-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile.advisor  Dockerfile.caddy  Dockerfile.codex  Dockerfile.layer  Dockerfile.postgres  Makefile  README.md  alembic.ini  coding-session.md  docker-compose.layer.yml  docker-compose.yml  ingest_15.json  pyproject.toml
.claude/skills/test-and-deploy-bylaw/: SKILL.md
alembic/: env.py
alembic/versions/: 0001_initial_layer1_schema.py  0002_layer2_retrieval_schema.py  0003_semantic_index_schema.py  0004_external_dataset_schema.py  0005_geocode_cache.py  0006_source_image.py  0007_advisor_users.py  0008_advisor_billing_subscription.py  0009_postgis_spatial_index.py  0010_invite_request.py  0011_advisor_user_caps.py  0012_case_based_billing.py  0013_terms_acceptance.py
docs/: BACKLOG.md  BRANCHING_STRATEGY.md  DEPLOYMENT.md  DEV_DB_BACKUP.md  E2E_TESTING.md  TERMS_AND_CONDITIONS.md  architecture.md
docs/agent/: INSTALL.md  classifier-persona.md  claude_desktop_config.example.json  persona.md
evals/: sampleton_layer2_eval.json
examples/: openai_local_retrieval_agent.py  synthetic_bylaw_export.json
mcp/: README.md
mcp/bylaw_retrieval/: __init__.py  openai_tools.py  server.py  settings.py
mcp/bylaw_retrieval/api/: __init__.py  app.py
mcp/bylaw_retrieval/retrieval/: __init__.py  schemas.py  service.py
scripts/: backfill_user_emails.py  backfill_zoning_bylaw_names.py  backup-dev-db.sh  dev-setup.sh  dev-up.sh  e2e-down.sh  e2e-up.sh  inspect_case_metadata.py  inspect_zoning_canonical.py  install-backup-cron.sh  measure_compact_savings.py  peninsula_coverage_test.py  seed_e2e_parcels.py  seed_e2e_user.py  seed_e2e_zoning.py  seed_synthetic_fragment.py  setup-layer-env.sh  verify_prompt_cache.py
src/advisor/: __init__.py
src/advisor/admin/: __init__.py  router.py
src/advisor/api/: __init__.py  app.py  auth.py  cases_router.py  db_session_store.py  dev.py  e2e_server.py  main.py  quota.py  (+2 more)
src/layer1/: __init__.py  cli.py  config.py  profiles.py
src/layer2/: __init__.py  cli.py  config.py
tests/: conftest.py  test_audit.py  test_backup_dev_db.py  test_boilerplate.py  test_citations.py  test_crossrefs.py  test_docling_parser.py  test_hierarchy.py  test_integration_ingest.py  test_parsers_factory.py  test_pdf_parser.py  test_picture_extraction.py  test_profiles.py  test_retrieval.py  test_retrieval_latest_only.py  test_retrieval_location_slot.py  test_retrieval_parallel_channels.py  test_retrieval_response_notes.py  test_semantic_enrichment.py  test_table_fallback.py  test_validation.py
tests/advisor/: conftest.py  test_dockerfile_advisor_packaging.py  test_legal.py
tests/datasets/: test_canonical.py  test_config.py  test_dataset_ingest.py  test_geo_parser.py  test_geocode.py  test_google_geocoder.py  test_linker.py  test_url_ingest.py
tests/fixtures/: synthetic_bylaw.txt
tests/layer2/: conftest.py  test_claim_parser.py  test_dataset_expansion.py  test_expansion.py  test_integration_pipeline.py  test_location_extraction.py  test_merge.py  test_permission_table_retrieval.py  test_prompt_builder.py  test_query_understanding.py  test_retrieval_api.py  test_semantic_retrieval.py  test_spatial.py
web/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts
web/app/: globals.css  layout.tsx
web/components/: abs-logo.tsx  auth-layout.tsx  btn.tsx  drawer.tsx  footer.tsx  form.tsx  highlight-word.tsx  mono.tsx  section.tsx  sheet.tsx  stat.tsx  theme-toggle.tsx  top-nav.tsx
web/e2e/: global-setup.ts
web/lib/: admin-auth.ts  advisor-auth.ts  api.ts  cases.ts  clerk-admin.ts  cn.ts  db.ts  invites.ts  mail.ts  mock.ts  parcel.ts  reasoning.ts  use-keyboard-inset.ts  use-media-query.ts  use-scroll-lock.ts  use-theme.ts
(+243 files in other folders)
